# multi-agent-flow

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/: README.md
apps/runner/: README.md
apps/server/: README.md
apps/web/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
doc/: GitHub分布式协作协议.md  多Agent协同工具产品需求文档-PRD.md  多Agent协同工具市场调研与可行性报告.md  多Agent协同工具系统设计文档.md  多Agent协同工具需求分析文档.md  接口总目录.md  接口设计与实现规范.md  项目框架与目录职责说明.md
doc/开发任务/: README.md  任务总索引.md  任务模板.md  任务范围清单.md
infra/: README.md
infra/compose/: README.md  docker-compose.yml
infra/docker/: README.md  runner.Dockerfile  server.Dockerfile  web.Dockerfile  web.nginx.conf
infra/sqlite/: README.md  pragmas.sql
migrations/: 0001_projects_and_members.sql  0002_project_workflow_run.sql  0003_git_coordination_projection.sql  README.md  __init__.py  runner.py
multi_agent_flow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: README.md  backup.ps1  bootstrap.ps1  dev.ps1  init-db.ps1  restore.ps1  seed-demo.ps1  verify.ps1
templates/: README.md
templates/git_coordination/: PROTOCOL.md  project.yaml  status.md
templates/website_delivery/: README.md  template.yaml  workflow.yaml
tests/: README.md  __init__.py  conftest.py
tests/contract/: README.md  test_control_reader.py  test_coordination_schema.py  test_docs.py  test_provider_adapters.py  test_tool_registry.py
tests/e2e/: README.md  test_final_acceptance.py  test_website_delivery_flow.py
tests/fixtures/: README.md  __init__.py  factories.py  git_repo.py  mock_providers.py  sensitive_config.py  temp_dir.py  virtual_clock.py
tests/integration/: README.md  test_agent_loop.py  test_artifact_lineage.py  test_artifact_store.py  test_auth.py  test_control_init.py  test_deployment.py  test_docker_manager.py  test_event_discovery.py  test_event_idempotency.py  test_git_concurrency.py  test_git_credentials.py  test_git_projection.py  test_git_wakeup.py  test_git_workspace.py  test_graph_checkpoint.py  test_graph_task_publish.py  test_inbox_decisions.py  test_mcp_sync.py  test_migrations.py  test_model_connections.py  test_model_probe.py  test_node_event_push.py  test_node_startup.py  test_node_sync_loop.py  test_outbox.py  test_progress_events.py  test_progress_reporter.py  test_projects.py  test_repository_binding.py  test_repository_review_adapters.py  test_review_quality_gate.py  test_run_commands.py  test_run_snapshot.py  test_settings.py  test_sqlite.py  test_submission_event.py  test_task_publish.py  test_validators.py  test_workflow_graph.py  (+2 more)
tests/security/: README.md  test_context_builder.py  test_docker_profiles.py  test_external_reuse.py  test_final_security_e2e.py  (+7 more)
(+354 files in other folders)
